Avalon.Repository/Querys/ODatas/ODataParsers/AvalonQueryParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 AvalonQuery.g3 2013-12-03 12:00:02

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Avalon.Framework.Querys
{
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
    [System.CLSCompliant(false)]
    public partial class AvalonQueryParser : Antlr.Runtime.Parser
    {
        internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALLPAGES", "AND", "ASC", "AVERAGE", "BOOL", "BYTE", "COUNT", "DATETIME", "DESC", "DOUBLE", "ENDSWITH", "EQUALS", "ESC_SEQ", "FILTER", "GREATERTHAN", "GREATERTHANOREQUAL", "GUID", "HEX_DIGIT", "HEX_PAIR", "IDENTIFIER", "IN", "INLINECOUNT", "INT", "LESSTHAN", "LESSTHANOREQUAL", "LONG", "MAX", "MIN", "NEWLINE", "NONE", "NOT", "NOTEQUALS", "NOTIN", "NULL", "OCTAL_ESC", "OR", "ORDERBY", "SELECT", "SINGLE", "SKIP", "SPACE", "STARTSWITH", "STRING", "SUBSTRINGOF", "SUM", "TOP", "UNICODE_ESC", "'&'", "'('", "')'", "','"
	};
        public const int EOF = -1;
        public const int ALLPAGES = 4;
        public const int AND = 5;
        public const int ASC = 6;
        public const int AVERAGE = 7;
        public const int BOOL = 8;
        public const int BYTE = 9;
        public const int COUNT = 10;
        public const int DATETIME = 11;
        public const int DESC = 12;
        public const int DOUBLE = 13;
        public const int ENDSWITH = 14;
        public const int EQUALS = 15;
        public const int ESC_SEQ = 16;
        public const int FILTER = 17;
        public const int GREATERTHAN = 18;
        public const int GREATERTHANOREQUAL = 19;
        public const int GUID = 20;
        public const int HEX_DIGIT = 21;
        public const int HEX_PAIR = 22;
        public const int IDENTIFIER = 23;
        public const int IN = 24;
        public const int INLINECOUNT = 25;
        public const int INT = 26;
        public const int LESSTHAN = 27;
        public const int LESSTHANOREQUAL = 28;
        public const int LONG = 29;
        public const int MAX = 30;
        public const int MIN = 31;
        public const int NEWLINE = 32;
        public const int NONE = 33;
        public const int NOT = 34;
        public const int NOTEQUALS = 35;
        public const int NOTIN = 36;
        public const int NULL = 37;
        public const int OCTAL_ESC = 38;
        public const int OR = 39;
        public const int ORDERBY = 40;
        public const int SELECT = 41;
        public const int SINGLE = 42;
        public const int SKIP = 43;
        public const int SPACE = 44;
        public const int STARTSWITH = 45;
        public const int STRING = 46;
        public const int SUBSTRINGOF = 47;
        public const int SUM = 48;
        public const int TOP = 49;
        public const int UNICODE_ESC = 50;
        public const int T__51 = 51;
        public const int T__52 = 52;
        public const int T__53 = 53;
        public const int T__54 = 54;

        public AvalonQueryParser(ITokenStream input)
            : this(input, new RecognizerSharedState())
        {
        }
        public AvalonQueryParser(ITokenStream input, RecognizerSharedState state)
            : base(input, state)
        {
            ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
            CreateTreeAdaptor(ref treeAdaptor);
            TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
            OnCreated();
        }
        // Implement this function in your helper file to use a custom tree adaptor
        partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

        private ITreeAdaptor adaptor;

        public ITreeAdaptor TreeAdaptor
        {
            get
            {
                return adaptor;
            }

            set
            {
                this.adaptor = value;
            }
        }

        public override string[] TokenNames { get { return AvalonQueryParser.tokenNames; } }
        public override string GrammarFileName { get { return "AvalonQuery.g3"; } }


        partial void OnCreated();
        partial void EnterRule(string ruleName, int ruleIndex);
        partial void LeaveRule(string ruleName, int ruleIndex);

        #region Rules
        partial void EnterRule_prog();
        partial void LeaveRule_prog();
        // $ANTLR start "prog"
        // AvalonQuery.g3:19:1: public prog : ( param ( '&' ! param )* )* ;
        [GrammarRule("prog")]
        public AstParserRuleReturnScope<CommonTree, CommonToken> prog()
        {
            EnterRule_prog();
            EnterRule("prog", 1);
            TraceIn("prog", 1);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken char_literal2 = default(CommonToken);
            AstParserRuleReturnScope<CommonTree, CommonToken> param1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> param3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            CommonTree char_literal2_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "prog");
                DebugLocation(19, 25);
                try
                {
                    // AvalonQuery.g3:20:2: ( ( param ( '&' ! param )* )* )
                    DebugEnterAlt(1);
                    // AvalonQuery.g3:20:4: ( param ( '&' ! param )* )*
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(20, 4);
                        // AvalonQuery.g3:20:4: ( param ( '&' ! param )* )*
                        try
                        {
                            DebugEnterSubRule(2);
                            while (true)
                            {
                                int alt2 = 2;
                                try
                                {
                                    DebugEnterDecision(2, false);
                                    int LA2_1 = input.LA(1);

                                    if ((LA2_1 == COUNT || LA2_1 == FILTER || LA2_1 == INLINECOUNT || (LA2_1 >= ORDERBY && LA2_1 <= SELECT) || LA2_1 == SKIP || LA2_1 == TOP))
                                    {
                                        alt2 = 1;
                                    }


                                }
                                finally { DebugExitDecision(2); }
                                switch (alt2)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // AvalonQuery.g3:20:5: param ( '&' ! param )*
                                        {
                                            DebugLocation(20, 5);
                                            PushFollow(Follow._param_in_prog74);
                                            param1 = param();
                                            PopFollow();

                                            adaptor.AddChild(root_0, param1.Tree);
                                            DebugLocation(20, 11);
                                            // AvalonQuery.g3:20:11: ( '&' ! param )*
                                            try
                                            {
                                                DebugEnterSubRule(1);
                                                while (true)
                                                {
                                                    int alt1 = 2;
                                                    try
                                                    {
                                                        DebugEnterDecision(1, false);
                                                        int LA1_1 = input.LA(1);

                                                        if ((LA1_1 == 51))
                                                        {
                                                            alt1 = 1;
                                                        }


                                                    }
                                                    finally { DebugExitDecision(1); }
                                                    switch (alt1)
                                                    {
                                                        case 1:
                                                            DebugEnterAlt(1);
                                                            // AvalonQuery.g3:20:12: '&' ! param
                                                            {
                                                                DebugLocation(20, 15);
                                                                char_literal2 = (CommonToken)Match(input, 51, Follow._51_in_prog77);
                                                                DebugLocation(20, 17);
                                                                PushFollow(Follow._param_in_prog80);
                                                                param3 = param();
                                                                PopFollow();

                                                                adaptor.AddChild(root_0, param3.Tree);

                                                            }
                                                            break;

                                                        default:
                                                            goto loop1;
                                                    }
                                                }

                                            loop1:
                                                ;

                                            }
                                            finally { DebugExitSubRule(1); }


                                        }
                                        break;

                                    default:
                                        goto loop2;
                                }
                            }

                        loop2:
                            ;

                        }
                        finally { DebugExitSubRule(2); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("prog", 1);
                    LeaveRule("prog", 1);
                    LeaveRule_prog();
                }
                DebugLocation(20, 25);
            }
            finally { DebugExitRule(GrammarFileName, "prog"); }
            return retval;

        }
        // $ANTLR end "prog"

        partial void EnterRule_param();
        partial void LeaveRule_param();
        // $ANTLR start "param"
        // AvalonQuery.g3:22:1: param : ( orderby | top | skip | filter | select | inlinecount | count ) ;
        [GrammarRule("param")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> param()
        {
            EnterRule_param();
            EnterRule("param", 2);
            TraceIn("param", 2);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            AstParserRuleReturnScope<CommonTree, CommonToken> orderby4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> top5 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> skip6 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> filter7 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> select8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> inlinecount9 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> count10 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            try
            {
                DebugEnterRule(GrammarFileName, "param");
                DebugLocation(22, 70);
                try
                {
                    // AvalonQuery.g3:22:7: ( ( orderby | top | skip | filter | select | inlinecount | count ) )
                    DebugEnterAlt(1);
                    // AvalonQuery.g3:22:9: ( orderby | top | skip | filter | select | inlinecount | count )
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(22, 9);
                        // AvalonQuery.g3:22:9: ( orderby | top | skip | filter | select | inlinecount | count )
                        int alt3 = 7;
                        try
                        {
                            DebugEnterSubRule(3);
                            try
                            {
                                DebugEnterDecision(3, false);
                                switch (input.LA(1))
                                {
                                    case ORDERBY:
                                        {
                                            alt3 = 1;
                                        }
                                        break;
                                    case TOP:
                                        {
                                            alt3 = 2;
                                        }
                                        break;
                                    case SKIP:
                                        {
                                            alt3 = 3;
                                        }
                                        break;
                                    case FILTER:
                                        {
                                            alt3 = 4;
                                        }
                                        break;
                                    case SELECT:
                                        {
                                            alt3 = 5;
                                        }
                                        break;
                                    case INLINECOUNT:
                                        {
                                            alt3 = 6;
                                        }
                                        break;
                                    case COUNT:
                                        {
                                            alt3 = 7;
                                        }
                                        break;
                                    default:
                                        {
                                            NoViableAltException nvae = new NoViableAltException("", 3, 0, input, 1);
                                            DebugRecognitionException(nvae);
                                            throw nvae;
                                        }
                                }

                            }
                            finally { DebugExitDecision(3); }
                            switch (alt3)
                            {
                                case 1:
                                    DebugEnterAlt(1);
                                    // AvalonQuery.g3:22:10: orderby
                                    {
                                        DebugLocation(22, 10);
                                        PushFollow(Follow._orderby_in_param93);
                                        orderby4 = orderby();
                                        PopFollow();

                                        adaptor.AddChild(root_0, orderby4.Tree);

                                    }
                                    break;
                                case 2:
                                    DebugEnterAlt(2);
                                    // AvalonQuery.g3:22:20: top
                                    {
                                        DebugLocation(22, 20);
                                        PushFollow(Follow._top_in_param97);
                                        top5 = top();
                                        PopFollow();

                                        adaptor.AddChild(root_0, top5.Tree);

                                    }
                                    break;
                                case 3:
                                    DebugEnterAlt(3);
                                    // AvalonQuery.g3:22:26: skip
                                    {
                                        DebugLocation(22, 26);
                                        PushFollow(Follow._skip_in_param101);
                                        skip6 = skip();
                                        PopFollow();

                                        adaptor.AddChild(root_0, skip6.Tree);

                                    }
                                    break;
                                case 4:
                                    DebugEnterAlt(4);
                                    // AvalonQuery.g3:22:33: filter
                                    {
                                        DebugLocation(22, 33);
                                        PushFollow(Follow._filter_in_param105);
                                        filter7 = filter();
                                        PopFollow();

                                        adaptor.AddChild(root_0, filter7.Tree);

                                    }
                                    break;
                                case 5:
                                    DebugEnterAlt(5);
                                    // AvalonQuery.g3:22:42: select
                                    {
                                        DebugLocation(22, 42);
                                        PushFollow(Follow._select_in_param109);
                                        select8 = select();
                                        PopFollow();

                                        adaptor.AddChild(root_0, select8.Tree);

                                    }
                                    break;
                                case 6:
                                    DebugEnterAlt(6);
                                    // AvalonQuery.g3:22:51: inlinecount
                                    {
                                        DebugLocation(22, 51);
                                        PushFollow(Follow._inlinecount_in_param113);
                                        inlinecount9 = inlinecount();
                                        PopFollow();

                                        adaptor.AddChild(root_0, inlinecount9.Tree);

                                    }
                                    break;
                                case 7:
                                    DebugEnterAlt(7);
                                    // AvalonQuery.g3:22:65: count
                                    {
                                        DebugLocation(22, 65);
                                        PushFollow(Follow._count_in_param117);
                                        count10 = count();
                                        PopFollow();

                                        adaptor.AddChild(root_0, count10.Tree);

                                    }
                                    break;

                            }
                        }
                        finally { DebugExitSubRule(3); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("param", 2);
                    LeaveRule("param", 2);
                    LeaveRule_param();
                }
                DebugLocation(22, 70);
            }
            finally { DebugExitRule(GrammarFileName, "param"); }
            return retval;

        }
        // $ANTLR end "param"

        partial void EnterRule_skip();
        partial void LeaveRule_skip();
        // $ANTLR start "skip"
        // AvalonQuery.g3:24:1: skip : SKIP ^ ( INT )+ ;
        [GrammarRule("skip")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> skip()
        {
            EnterRule_skip();
            EnterRule("skip", 3);
            TraceIn("skip", 3);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken SKIP11 = default(CommonToken);
            CommonToken INT12 = default(CommonToken);

            CommonTree SKIP11_tree = default(CommonTree);
            CommonTree INT12_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "skip");
                DebugLocation(24, 13);
                try
                {
                    // AvalonQuery.g3:25:2: ( SKIP ^ ( INT )+ )
                    DebugEnterAlt(1);
                    // AvalonQuery.g3:25:4: SKIP ^ ( INT )+
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(25, 8);
                        SKIP11 = (CommonToken)Match(input, SKIP, Follow._SKIP_in_skip128);
                        SKIP11_tree = (CommonTree)adaptor.Create(SKIP11);
                        root_0 = (CommonTree)adaptor.BecomeRoot(SKIP11_tree, root_0);
                        DebugLocation(25, 10);
                        // AvalonQuery.g3:25:10: ( INT )+
                        int cnt4 = 0;
                        try
                        {
                            DebugEnterSubRule(4);
                            while (true)
                            {
                                int alt4 = 2;
                                try
                                {
                                    DebugEnterDecision(4, false);
                                    int LA4_1 = input.LA(1);

                                    if ((LA4_1 == INT))
                                    {
                                        alt4 = 1;
                                    }


                                }
                                finally { DebugExitDecision(4); }
                                switch (alt4)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // AvalonQuery.g3:25:10: INT
                                        {
                                            DebugLocation(25, 10);
                                            INT12 = (CommonToken)Match(input, INT, Follow._INT_in_skip131);
                                            INT12_tree = (CommonTree)adaptor.Create(INT12);
                                            adaptor.AddChild(root_0, INT12_tree);

                                        }
                                        break;

                                    default:
                                        if (cnt4 >= 1)
                                            goto loop4;

                                        EarlyExitException eee4 = new EarlyExitException(4, input);
                                        DebugRecognitionException(eee4);
                                        throw eee4;
                                }
                                cnt4++;
                            }
                        loop4:
                            ;

                        }
                        finally { DebugExitSubRule(4); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("skip", 3);
                    LeaveRule("skip", 3);
                    LeaveRule_skip();
                }
                DebugLocation(25, 13);
            }
            finally { DebugExitRule(GrammarFileName, "skip"); }
            return retval;

        }
        // $ANTLR end "skip"

        partial void EnterRule_top();
        partial void LeaveRule_top();
        // $ANTLR start "top"
        // AvalonQuery.g3:27:1: top : TOP ^ ( INT )+ ;
        [GrammarRule("top")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> top()
        {
            EnterRule_top();
            EnterRule("top", 4);
            TraceIn("top", 4);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken TOP13 = default(CommonToken);
            CommonToken INT14 = default(CommonToken);

            CommonTree TOP13_tree = default(CommonTree);
            CommonTree INT14_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "top");
                DebugLocation(27, 12);
                try
                {
                    // AvalonQuery.g3:28:2: ( TOP ^ ( INT )+ )
                    DebugEnterAlt(1);
                    // AvalonQuery.g3:28:4: TOP ^ ( INT )+
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(28, 7);
                        TOP13 = (CommonToken)Match(input, TOP, Follow._TOP_in_top142);
                        TOP13_tree = (CommonTree)adaptor.Create(TOP13);
                        root_0 = (CommonTree)adaptor.BecomeRoot(TOP13_tree, root_0);
                        DebugLocation(28, 9);
                        // AvalonQuery.g3:28:9: ( INT )+
                        int cnt5 = 0;
                        try
                        {
                            DebugEnterSubRule(5);
                            while (true)
                            {
                                int alt5 = 2;
                                try
                                {
                                    DebugEnterDecision(5, false);
                                    int LA5_1 = input.LA(1);

                                    if ((LA5_1 == INT))
                                    {
                                        alt5 = 1;
                                    }


                                }
                                finally { DebugExitDecision(5); }
                                switch (alt5)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // AvalonQuery.g3:28:9: INT
                                        {
                                            DebugLocation(28, 9);
                                            INT14 = (CommonToken)Match(input, INT, Follow._INT_in_top145);
                                            INT14_tree = (CommonTree)adaptor.Create(INT14);
                                            adaptor.AddChild(root_0, INT14_tree);

                                        }
                                        break;

                                    default:
                                        if (cnt5 >= 1)
                                            goto loop5;

                                        EarlyExitException eee5 = new EarlyExitException(5, input);
                                        DebugRecognitionException(eee5);
                                        throw eee5;
                                }
                                cnt5++;
                            }
                        loop5:
                            ;

                        }
                        finally { DebugExitSubRule(5); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("top", 4);
                    LeaveRule("top", 4);
                    LeaveRule_top();
                }
                DebugLocation(28, 12);
            }
            finally { DebugExitRule(GrammarFileName, "top"); }
            return retval;

        }
        // $ANTLR end "top"

        partial void EnterRule_filter();
        partial void LeaveRule_filter();
        // $ANTLR start "filter"
        // AvalonQuery.g3:30:1: filter : FILTER ^ filterexpression[false] ;
        [GrammarRule("filter")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> filter()
        {
            EnterRule_filter();
            EnterRule("filter", 5);
            TraceIn("filter", 5);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken FILTER15 = default(CommonToken);
            AstParserRuleReturnScope<CommonTree, CommonToken> filterexpression16 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            CommonTree FILTER15_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "filter");
                DebugLocation(30, 34);
                try
                {
                    // AvalonQuery.g3:31:2: ( FILTER ^ filterexpression[false] )
                    DebugEnterAlt(1);
                    // AvalonQuery.g3:31:4: FILTER ^ filterexpression[false]
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(31, 10);
                        FILTER15 = (CommonToken)Match(input, FILTER, Follow._FILTER_in_filter156);
                        FILTER15_tree = (CommonTree)adaptor.Create(FILTER15);
                        root_0 = (CommonTree)adaptor.BecomeRoot(FILTER15_tree, root_0);
                        DebugLocation(31, 12);
                        PushFollow(Follow._filterexpression_in_filter159);
                        filterexpression16 = filterexpression(false);
                        PopFollow();

                        adaptor.AddChild(root_0, filterexpression16.Tree);

                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("filter", 5);
                    LeaveRule("filter", 5);
                    LeaveRule_filter();
                }
                DebugLocation(31, 34);
            }
            finally { DebugExitRule(GrammarFileName, "filter"); }
            return retval;

        }
        // $ANTLR end "filter"

        partial void EnterRule_select();
        partial void LeaveRule_select();
        // $ANTLR start "select"
        // AvalonQuery.g3:33:1: select : SELECT ^ propertyname ( ( SPACE )? ',' ( SPACE )? propertyname )* ;
        [GrammarRule("select")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> select()
        {
            EnterRule_select();
            EnterRule("select", 6);
            TraceIn("select", 6);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken SELECT17 = default(CommonToken);
            CommonToken SPACE19 = default(CommonToken);
            CommonToken char_literal20 = default(CommonToken);
            CommonToken SPACE21 = default(CommonToken);
            AstParserRuleReturnScope<CommonTree, CommonToken> propertyname18 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> propertyname22 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            CommonTree SELECT17_tree = default(CommonTree);
            CommonTree SPACE19_tree = default(CommonTree);
            CommonTree char_literal20_tree = default(CommonTree);
            CommonTree SPACE21_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "select");
                DebugLocation(33, 57);
                try
                {
                    // AvalonQuery.g3:34:2: ( SELECT ^ propertyname ( ( SPACE )? ',' ( SPACE )? propertyname )* )
                    DebugEnterAlt(1);
                    // AvalonQuery.g3:34:4: SELECT ^ propertyname ( ( SPACE )? ',' ( SPACE )? propertyname )*
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(34, 10);
                        SELECT17 = (CommonToken)Match(input, SELECT, Follow._SELECT_in_select170);
                        SELECT17_tree = (CommonTree)adaptor.Create(SELECT17);
                        root_0 = (CommonTree)adaptor.BecomeRoot(SELECT17_tree, root_0);
                        DebugLocation(34, 12);
                        PushFollow(Follow._propertyname_in_select173);
                        propertyname18 = propertyname();
                        PopFollow();

                        adaptor.AddChild(root_0, propertyname18.Tree);
                        DebugLocation(34, 25);
                        // AvalonQuery.g3:34:25: ( ( SPACE )? ',' ( SPACE )? propertyname )*
                        try
                        {
                            DebugEnterSubRule(8);
                            while (true)
                            {
                                int alt8 = 2;
                                try
                                {
                                    DebugEnterDecision(8, false);
                                    int LA8_1 = input.LA(1);

                                    if ((LA8_1 == SPACE || LA8_1 == 54))
                                    {
                                        alt8 = 1;
                                    }


                                }
                                finally { DebugExitDecision(8); }
                                switch (alt8)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // AvalonQuery.g3:34:26: ( SPACE )? ',' ( SPACE )? propertyname
                                        {
                                            DebugLocation(34, 26);
                                            // AvalonQuery.g3:34:26: ( SPACE )?
                                            int alt6 = 2;
                                            try
                                            {
                                                DebugEnterSubRule(6);
                                                try
                                                {
                                                    DebugEnterDecision(6, false);
                                                    int LA6_1 = input.LA(1);
